--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "neos/flow": "*",
         "neos/neos": "~5.0 || ~4.0",
-        "neos/form-builder": "~1.0"
+        "neos/form-builder": "~1.0 || ~2.0"
     },
     "autoload": {
         "psr-4": {
